--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,14 @@ dependencies:
   expansion_card: ^0.1.0
   url_launcher: ^5.5.0
   animated_text_kit: ^2.2.0
-  velocity_x: ^0.4.1
+  velocity_x: ^1.0.1
+  get: ^3.22.2
+  simple_animations: ^2.4.2
   
   google_fonts: ^1.1.0
   flutter_icons: ^1.1.0
+  clay_containers: ^0.2.2
+  device_info: ^1.0.0
   syncfusion_flutter_gauges: ^18.2.57
 
 dev_dependencies:
